--- a/package.json
+++ b/package.json
@@ -6,18 +6,46 @@
   "scripts": {
     "test": "jest",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "ng": "ng",
+    "start-frontend": "ng serve",
+    "build-frontend": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test-frontend": "ng test"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@angular-devkit/build-angular": "^19.0.3",
+    "@angular/cli": "^19.0.3",
+    "@angular/compiler-cli": "^19.0.0",
+    "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.9.0",
+    "@types/node": "^22.10.1",
+    "jasmine-core": "~5.4.0",
     "jest": "^29.7.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "tailwindcss": "^3.4.16",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.3"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "@angular/animations": "^19.0.0",
+    "@angular/common": "^19.0.0",
+    "@angular/compiler": "^19.0.0",
+    "@angular/core": "^19.0.0",
+    "@angular/forms": "^19.0.0",
+    "@angular/platform-browser": "^19.0.0",
+    "@angular/platform-browser-dynamic": "^19.0.0",
+    "@angular/router": "^19.0.0",
+    "flowbite": "^2.5.2",
+    "lodash": "^4.17.21",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.15.0"
   }
 }
