--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@angular/platform-browser": "^19.0.3",
     "@angular/platform-browser-dynamic": "^19.0.3",
     "@angular/router": "^19.0.3",
+    "@swimlane/ngx-graph": "^9.0.1",
     "flowbite": "^2.5.2",
     "lodash": "^4.17.21",
     "rxjs": "~7.8.0",
